k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: k8s-learning-app-ui
  namespace: k8s-learning-app-api
  labals:
    app: k8s-learning-app-ui
  spec:
    replicas: 1
    selector:
      matchlabels: 
      app: k8s-learning-app-ui
    template:
      metadata:
        labels:
          app: k8s-learning-app-ui
      spec:
        containers:
          - name: ui
            image: ghcr.io/tafukagawa/k8s-learning-app-ui:latest
            imagePullPolicy: Always
            ports:
              - containerPort: 3001
            readinessProbe:
              httpGet:
                path: /healthz
                port: 3001
              initialDelaySeconds: 2
              periodSeconds: 5
            livenessProbe:
              httpGet:
                path: /healthz
                port: 3001
              initialDelaySeconds: 5
              periodSeconds: 10
