k8s/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-gateway
  namespace: k8s-learning-app-api
spec:
  type: LoadBalancer
  selector:
    app: kong-gateway
  ports:
    - port: 8000
      targetPort: 8000
      name: proxy
