k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-learning-app-api
  namespace: k8s-learning-app-api
spec:
  selector:
    app: k8s-learning-app-api
  ports:
    - port: 80
      targetPort: 3000
