k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-learning-app-ui
  namespace: k8s-learning-app-api
spec:
  selector:
    app: k8s-learning-app-ui
  ports:
    - port: 80
      targetPort: 3001
