k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-learning-app-api
  namespace: k8s-learning-app-api
spec:
  ingressClassName: traefik
  rules:
    - host: k8s-learning-app-api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-learning-app-api
                port:
                  number: 80
